// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Question Default 1`] = `
<div
  className="question-wrapper"
>
  <div
    className="question-wrapper--label"
  >
    Question 1
  </div>
  <div
    className="question--container"
  >
    What 
    <span
      className="question--dash"
      data-testid="dash-component"
    >
      
    </span>
     you doing?
  </div>
  <div
    className="question-wrapper--instruction"
  >
    Select the appropriate option to fill the gap
  </div>
  <div
    className="question-options--container"
  >
    <button
      className="btn  "
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
      type="button"
      value="are"
    >
      A. are
    </button>
    <button
      className="btn  "
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
      type="button"
      value="is"
    >
      B. is
    </button>
    <button
      className="btn  "
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
      type="button"
      value="did"
    >
      C. did
    </button>
    <button
      className="btn  "
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
      type="button"
      value="do"
    >
      D. do
    </button>
  </div>
</div>
`;

exports[`Storyshots Question Error 1`] = `
<div
  className="question-wrapper error"
>
  <div
    className="error-icon"
  >
    ❌
  </div>
  <div
    className="error-message"
  >
    Something went wrong
  </div>
</div>
`;

exports[`Storyshots Question Loading 1`] = `
<div
  className="question-wrapper"
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-text"
      >
        <span>
          The question is being loaded therefore this has to be long
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots QuestionDash Default 1`] = `
<span
  className="question--dash"
  data-testid="dash-component"
>
  
</span>
`;

exports[`Storyshots QuestionDash Selected 1`] = `
<span
  className="question--dash"
  data-testid="dash-component"
>
  are
</span>
`;

exports[`Storyshots QuestionOptions Answered Correctly 1`] = `
<div
  className="question-options--container"
>
  <button
    className="btn btn--selected btn--selected-correct"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="are"
  >
    A. are
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="is"
  >
    B. is
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="did"
  >
    C. did
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="do"
  >
    D. do
  </button>
</div>
`;

exports[`Storyshots QuestionOptions Answered Wrongly 1`] = `
<div
  className="question-options--container"
>
  <button
    className="btn  btn--selected-correct"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="are"
  >
    A. are
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="is"
  >
    B. is
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="did"
  >
    C. did
  </button>
  <button
    className="btn btn--selected btn--selected-wrong"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="do"
  >
    A. do
  </button>
</div>
`;

exports[`Storyshots QuestionOptions Default 1`] = `
<div
  className="question-options--container"
>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="are"
  >
    A. are
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="is"
  >
    B. is
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="did"
  >
    C. did
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="do"
  >
    D. do
  </button>
</div>
`;

exports[`Storyshots QuestionOptions Selected 1`] = `
<div
  className="question-options--container"
>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="are"
  >
    A. are
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="is"
  >
    B. is
  </button>
  <button
    className="btn  "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="did"
  >
    C. did
  </button>
  <button
    className="btn btn--selected "
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    type="button"
    value="do"
  >
    D. do
  </button>
</div>
`;

exports[`Storyshots QuestionText Default 1`] = `
<div
  className="question--container"
>
  What 
  <span
    className="question--dash"
    data-testid="dash-component"
  >
    
  </span>
   you doing?
</div>
`;

exports[`Storyshots QuestionText Selected 1`] = `
<div
  className="question--container"
>
  What 
  <span
    className="question--dash"
    data-testid="dash-component"
  >
    are
  </span>
   you doing?
</div>
`;

exports[`Storyshots SelectOptionButton Correct 1`] = `
<button
  className="btn btn--selected btn--selected-correct"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
  value="Yes"
>
  A. Yes
</button>
`;

exports[`Storyshots SelectOptionButton Default 1`] = `
<button
  className="btn  "
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
  value="Yes"
>
  A. Yes
</button>
`;

exports[`Storyshots SelectOptionButton Selected 1`] = `
<button
  className="btn btn--selected "
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
  value="Yes"
>
  A. Yes
</button>
`;

exports[`Storyshots SelectOptionButton Wrong 1`] = `
<button
  className="btn btn--selected btn--selected-wrong"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
  value="Yes"
>
  A. Yes
</button>
`;
